--- a/test_resources/log4j.properties
+++ b/test_resources/log4j.properties
@@ -21,3 +21,6 @@ log4j.logger.metabase=ERROR
 log4j.logger.metabase.test-setup=INFO
 log4j.logger.metabase.test.data.datasets=INFO
 log4j.logger.metabase.util.encryption=INFO
+# NOCOMMIT
+log5j.logger.metabase.sync=DEBUG
+log5j.logger.metabase.sync-database=DEBUG
