--- a/test_resources/log4j.properties
+++ b/test_resources/log4j.properties
@@ -23,3 +23,4 @@ log4j.logger.metabase.test.data.datasets=INFO
 log4j.logger.metabase.util.encryption=INFO
 # NOCOMMIT
 log4j.logger.metabase.sync=DEBUG
+log4j.logger.metabase.test.data=DEBUG
